--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
 		"nomad-codecheck": "./index.js"
 	},
 	"author": "",
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"chalk": "^2.4.2",
+		"fs": "0.0.1-security",
+		"path": "^0.12.7",
+		"shelljs": "^0.8.3"
+	}
 }
