--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"bin": {
 		"nomad-codecheck": "./index.js"
 	},
-	"author": "Fatih Yildiz <fatih@nomadinteractive.co>",
+	"author": "Nomad Interactive <hello@nomadinteractive.co>",
 	"license": "MIT",
 	"dependencies": {
 		"branch-name-lint": "^1.0.5",
