--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "nomad-codecheck",
+	"name": "@nomadinteractive/nomad-codecheck",
 	"version": "1.0.33",
 	"description": "",
 	"main": "index.js",
 	"bin": {
 		"nomad-codecheck": "./index.js"
 	},
-	"author": "Fatih Yildiz <fatih@nomadinteractive.co>",
+	"author": "Nomad Interactive <hello@nomadinteractive.co>",
 	"license": "MIT",
 	"dependencies": {
 		"branch-name-lint": "^1.0.5",
