--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nomadinteractive/nomad-codecheck",
-	"version": "1.0.33",
+	"version": "1.0.36",
 	"description": "",
 	"main": "index.js",
 	"bin": {
@@ -8,6 +8,7 @@
 	},
 	"author": "Nomad Interactive <hello@nomadinteractive.co>",
 	"license": "MIT",
+	"repository": "github:nomadinteractive/nomad-codecheck",
 	"dependencies": {
 		"branch-name-lint": "^1.0.5",
 		"chalk": "^2.4.2",
